--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="subject" content="Non-Orthodox Judaism"/>
 <meta name="description" content="Uriel: Looking at the world through the prism of Judaism">
 <meta name="keywords" content="judaism, light"/>
-<meta name="copyright" content="Copyright (C) 2018-2024 Judka Linkov <judka@uriel.world>"/>
+<meta name="copyright" content="(C) 2018-2024 Judka Linkov <judka@uriel.world>"/>
 <style type="text/css">
 body {
   display: flex;
@@ -94,15 +94,15 @@ a {
 <body>
   <div class="main-content">
     <div class="title-page">
-      <div class="intro">Предлагается для свободного скачивания новая книга</div>
+      <div class="intro">Предлагается для свободного скачивания и чтения новая книга</div>
       <div class="title">УРИЭЛЬ: Взгляд на мир <br />сквозь призму иудаизма</div>
-      <div class="button"><a href="uriel_1.pdf" class="download-btn" download>Скачать</a></div>
+      <div class="button"><a href="files/book/202412/Uriel.pdf" class="download-btn" download>Скачать</a></div>
     </div>
   </div>
   <div class="footer">
     <div class="license-text">Книга распространяется под лицензией</div>
-    <div class="license-link"><a href="./LICENSE">Creative Commons Attribution-ShareAlike 4.0 International</a></div>
-    <div class="copyright">Copyright &copy; 2024 Judka Linkov <a href="mailto:judka@uriel.world">judka@uriel.world</a></div>
+    <div class="license-link"><a href="./LICENSE">Creative Commons Attribution 4.0 International</a></div>
+    <div class="copyright">&copy; 2024 Judka Linkov <a href="mailto:judka@uriel.world">judka@uriel.world</a></div>
   </div>
 </body>
 </html>
