--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ styles:
     <div class="intro">Предлагается для свободного скачивания и чтения новая книга</div>
     <div class="title">УРИЭЛЬ: Взгляд на мир <br />сквозь призму иудаизма</div>
     <div class="button"><a href="files/book/202412/Uriel.pdf" class="blue-btn btn" download>Скачать</a></div>
-    <div class="button"><a href="ru/book" class="grey-btn btn">Читать онлайн</a></div>
+    <div class="button"><a href="ru/book" class="grey-btn btn">Читать</a></div>
   </div>
 </div>
 <div class="footer">
   <div class="license-text">Книга распространяется под лицензией</div>
   <div class="license-link"><a href="./LICENSE">Creative Commons Attribution 4.0 International</a></div>
-  <div class="copyright">&copy; 2024 Judka Linkov <a href="mailto:judka@uriel.world">judka@uriel.world</a></div>
+  <div class="copyright">&copy; 2024-<span x-data="{ year: new Date().getFullYear() }" x-text="year">{{ "now" | date: "%Y" }}</span> Judka Linkov <a href="mailto:judka@uriel.world">judka@uriel.world</a></div>
 </div>
