Improve clicks on the menu

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -9,7 +9,11 @@ styles:
 - /files/page/style.css
 - /files/book/style.css
 more_sidebar_html: |
-  <button @click="buttons = !buttons" @click.shift="$dispatch('openall')" @dblclick="buttons = true; $nextTick(() => {$dispatch('openall')})" :title="buttons ? 'Без комментариев' : 'С комментариями (Shift/DoubleClick - Open All)'">…</button>
+  <button x-data="{ clicked : false }"
+          @click="if (!clicked) setTimeout(() => { buttons = !buttons; if (clicked == 2) $nextTick(() => {$dispatch('openall')}); clicked = false; }, 500); clicked = true"
+          @click.shift="clicked = 2"
+          @dblclick="clicked = 2"
+          :title="buttons ? 'Без комментариев' : 'С комментариями (Shift/DoubleClick - Open All)'">…</button>
 toc:
 - title: Хаос и пустота
   id: tohu-vavohu
