Update comments in the book and add Subscribe button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ styles:
 - /files/root/style.css
 ---
 <div class="main-content">
+  <div id="button-updates">
+    <a href="https://uriel.social/@judka" target="_blank">Подписаться на обновления</a>
+  </div>
   <div class="title-page">
     <div class="intro">Предлагается для свободного скачивания и чтения новая книга</div>
     <div class="title">УРИЭЛЬ: Взгляд на мир <br />сквозь призму иудаизма</div>
