--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subject: Non-Orthodox Judaism
 copyright: "(C) 2018-2024 Judka Linkov <judka@uriel.world>"
 lang: ru
 styles:
-- /files/root/style.css
+- /files/home/style.css
 ---
 <div class="main-content">
   <div id="button-updates">
