--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@ styles:
 <div class="footer">
   <div class="license-text">Книга распространяется под лицензией</div>
   <div class="license-link"><a href="./LICENSE">Creative Commons Attribution 4.0 International</a></div>
-  <div class="copyright">&copy; 2024-<span x-data="{ year: new Date().getFullYear() }" x-text="year">{{ "now" | date: "%Y" }}</span> Judka Linkov <a href="mailto:judka@uriel.world">judka@uriel.world</a></div>
+  <div class="copyright">&copy; 2024-<span x-data="{ year: new Date().getFullYear() }" x-text="year">{{ "now" | date: "%Y" }}</span> <a href="/ru/judka">Judka Linkov</a> <a href="mailto:judka@uriel.world">judka@uriel.world</a></div>
 </div>
