Update comments in the book

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -6720,8 +6720,8 @@ XX <a href="https://www.sefaria.org/The_Antiquities_of_the_Jews.20.7">7</a>).
 
 <p>Раньше достоверно установить отцовство можно было только у знаменитых отцов.
 Например, в Йевамот <a href="https://www.sefaria.org/Yevamot.37b.6">37b</a>
-описывается обычай, когда известные раввины ненадолго уезжали
-от жены в командировку, и там на денёк брали в жёны местных женщин.
+описывается обычай, когда известные раввины ненадолго уезжали от жены
+в командировку, и там на денёк брали в жёны местных женщин. <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">подженились</span></span></template>
 Так вот дети этих женщин считались законными потомками отцов-раввинов,
 потому что всем было известно, что они отцы этих детей.</p>
 
@@ -11737,6 +11737,16 @@ LED (<em>light-emitting diode</em>) излучают фотоны, когда э
 подтверждается, что изучение Торы — более великое дело,
 чем ежедневное жертвоприношение.</p>
 
+<template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
+<p>Также мидраш Танхума Беһаалотха
+<a href="https://www.sefaria.org/Midrash_Tanchuma,_Beha'alotcha.5.1">5</a> учит, что слова
+Бемидбар 8:2 «Говори Аһарону и скажи ему: когда будешь зажигать светильники»
+понимаются так, что когда Аһарон огорчился, что жертвоприношения совершают
+все кроме колена Леви, Б‑г сказал, что заповедь зажигать светильники Меноры
+важнее, чем все жертвоприношения.  И действительно, в Хануку первым делом
+зажгли светильники Меноры.</p>
+</div></div></template>
+
 <p>Разные виды жертвоприношений имеют разные виды замены.  В основном жертвуются
 время и деньги: время — на молитвы, изучение Торы и совершение добрых дел,
 а деньги — на цдаку нуждающимся и на добрые дела.
@@ -12239,6 +12249,36 @@ LED (<em>light-emitting diode</em>) излучают фотоны, когда э
 <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">и Талмудом (Арахин <a href="https://www.sefaria.org/Arakhin.11a.2">11a</a>)</span></span></template>
 будут петь песни с аккомпанементом на музыкальных инструментах.
 Это и будет называться <em>авода</em> (служба).</p>
+
+<template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
+<p>В Третьем Храме должны будут использоваться
+<a href="https://en.wikipedia.org/wiki/Chazozra">серебряные трубы</a>
+в т.ч. для созыва народа к молитвам
+(Бемидбар <a href="https://www.sefaria.org/Numbers.10.1-10">10:1-10</a>)
+вместо шофара (в Шаббат <a href="https://www.sefaria.org/Shabbat.36a.2">36a</a>
+сказано, что после разрушения Второго Храма они поменялись ролями).
+Наглядным примером является их наличие на изображении утвари Храма
+на т.н. <a href="https://ru.wikipedia.org/wiki/Триумфальная_арка_Тита">Арке Тита</a>.</p>
+
+<p>Но в этом вопросе нужно проявлять осторожность,
+т.к. на том же самом барельефе также изображены
+животные в нижней части основания Храмовой Меноры.
+Иосиф Флавий не упомянул ничего подобного
+при описании Меноры в «Иудейских древностях»
+III <a href="https://www.sefaria.org/The_Antiquities_of_the_Jews.3.6.7">6:7</a>.
+Скорее всего изображения животных были добавлены по приказу Ирода.</p>
+
+<p>Также как и менора Ирода с изображениями животных была некошерна,
+точно так же некошерна и менора Рабиновича.  Хотя на ней и нет
+изображений животных, рашист и коллаборант оккупантов Рабинович такой
+же аморальный урод как Ирод, осквернявший Храм своими грязными лапами.
+Его золотая менора, как и золотой телец, была отлита с грубым нарушением
+законов Торы.  Он единолично спонсировал своё собственное
+прославление, чем выпятил свой эгоизм, вместо того,
+чтобы собрать со всех по пол-шекеля — так же как и масло
+для зажигания <em>нер тамид</em> принимается от всех бней Исраэль
+(Шмот <a href="https://www.sefaria.org/Exodus.27.20">27:20</a>).</p>
+</div></div></template>
 
 <p>Как раньше даже язычникам было позволено приносить жертвы в Храме
 (Ваикра <a href="https://www.sefaria.org/Leviticus.22.25">22:25</a>),
@@ -16927,7 +16967,10 @@ derived from <em>Babel fish</em></span></span></template></p>
 <p>Помню, как меня потрясла инсталляция в Яффе,
 предостерегающая против отрывания от корней.  Тогда я сфотографировал это
 <a href="https://en.wikipedia.org/wiki/Ran_Morin#Floating_Orange_Tree">висящее дерево</a>,
-оторванное от земли, и потом эта фотография была выбрана Гуглем для показа на карте.</p>
+оторванное от земли, и потом эта фотография была выбрана Гуглем для показа на карте.
+Кстати, может быть, на создание этого объекта вдохновил случай, когда к приезду
+Черчилля мэр Тель-Авива Дизенгоф приказал воткнуть в песок несколько пальм, а когда
+одно дерево упало, Черчилль невозмутимо заметил: «Без корней ничего не получится».</p>
 </div></div></template>
 
 <!-- TODO: add foto -->
