Add en/index.html and ru/index.html with redirection from index.html

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -1,9 +1,7 @@
 ---
+description: "УРИЭЛЬ: Взгляд на мир сквозь призму иудаизма"
 keywords: judaism, light
-subject: Non-Orthodox Judaism
-description: >-
-  Looking at the world through the prism of Judaism
-copyright: "(C) 2018-2024 Judka Linkov <judka@uriel.world>"
+copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
 lang: ru
 styles:
 - /files/book/page.css
