--- a/en/index.html
+++ b/en/index.html
@@ -3,10 +3,10 @@ description: "Uriel: Looking at the world through the prism of Judaism"
 keywords: judaism, light
 copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
 layout: default
-translations:
-  ru: /ru
 styles:
 - /files/home/style.css
+translations:
+  ru: /ru
 ---
 <div class="main-content">
   <div id="button-updates">
@@ -15,13 +15,13 @@ styles:
   <div class="title-page">
     <div class="intro">A new book is offered for free download and reading</div>
     <div class="title">Uriel: Looking at the world <br />through the prism of Judaism</div>
-    <div class="button"><a href="files/book/202412/Uriel.pdf" class="blue-btn btn" download>Download</a></div>
-    <div class="button"><a href="en/book" class="grey-btn btn">Read</a></div>
+    <div class="button"><a href="/files/book/202412/Uriel.pdf" class="blue-btn btn" download>Download</a></div>
+    <div class="button"><a href="/en/book" class="grey-btn btn">Read</a></div>
   </div>
 </div>
 <div class="footer">
   <div class="license-text">The book is distributed under the license</div>
-  <div class="license-link"><a href="./LICENSE">Creative Commons Attribution 4.0 International</a></div>
+  <div class="license-link"><a href="/LICENSE">Creative Commons Attribution 4.0 International</a></div>
   <div class="copyright">&copy; 2024-<span x-data="{ year: new Date().getFullYear() }" x-text="year">{{ "now" | date: "%Y" }}</span>
     <a href="/ru/judka">Judka Linkov</a>
     <a href="mailto:judka@uriel.world">judka@uriel.world</a>
