--- a/en/index.html
+++ b/en/index.html
@@ -23,7 +23,7 @@ translations:
   <div class="license-text">The book is distributed under the license</div>
   <div class="license-link"><a href="/LICENSE">Creative Commons Attribution 4.0 International</a></div>
   <div class="copyright">&copy; 2024-<span x-data="{ year: new Date().getFullYear() }" x-text="year">{{ "now" | date: "%Y" }}</span>
-    <a href="/ru/judka">Judka Linkov</a>
+    <a href="/en/judka">Judka Linkov</a>
     <a href="mailto:judka@uriel.world">judka@uriel.world</a>
   </div>
 </div>
