Mention image in basic files for jekyll-seo-tag

--- a/en/index.html
+++ b/en/index.html
@@ -1,6 +1,7 @@
 ---
 description: "Uriel: Looking at the world through the prism of Judaism"
 keywords: judaism, light
+image: /logo.jpg
 copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
 layout: default
 styles:
