--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -1,6 +1,7 @@
 ---
 description: "УРИЭЛЬ: Взгляд на мир сквозь призму иудаизма"
 keywords: judaism, light
+image: /logo.jpg
 copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
 toc:
 - title: Хаос и пустота
@@ -8203,7 +8204,10 @@ Identifying Humor, Satire, and Parody in Rabbinic Literature”)</em></p>
 спорил с дедушкой, укоряя его в отходе от простого смысла.  И в конце концов
 Раши признал, что был неправ, и что если у него было бы больше времени,
 то он переписал бы свои комментарии в соответствии с пшатом (см. комментарий
-Рашбама на Берешит <a href="https://www.sefaria.org/Genesis.37.2?with=Rashbam" target="_blank">37:2</a>).</p>
+Рашбама на Берешит <a href="https://www.sefaria.org/Genesis.37.2?with=Rashbam" target="_blank">37:2</a>).
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Также Рашбам критиковал дедушку за анахронизмы в духе «Был Песах»,
+такие как ссылку Раши на Шимшона при упоминании Дана в Берешит
+<a href="https://www.sefaria.org/Genesis.49.16?with=Rashbam" target="_blank">49:16</a>.</span></span></template></p>
 
 <p>Что означает это признание?  Раши в основном был просто компилятор.
 Из всего огромного массива текстов предшественников для своих комментариев
@@ -9336,6 +9340,7 @@ Identifying Humor, Satire, and Parody in Rabbinic Literature”)</em></p>
 как арабский имеет особый статус в Израиле.
 От арабов не требуется наделять гражданством столько же евреев, сколько
 арабов имеют гражданство Израиля и имеют равные права с евреями.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">В Израиле граждан-мусульман даже больше, чем евреев в Европе.</span></span></template>
 А требуется только ликвидировать сегодняшнюю полную асимметрию:
 когда на желание мира со стороны Израиля с другой стороны в ответ
 только ненависть.</p>
@@ -18061,7 +18066,8 @@ derived from <em>Babel fish</em></span></span></template></p>
 <p>Более популярной является
 <a href="https://ru.wikipedia.org/wiki/Диаграмма_Нолана" target="_blank">диаграмма Нолана</a>,
 на которой перевёрнутая на 45 градусов плоскость делится двумя осями координат,
-представляющими степень влияния государства на личные и экономические свободы.
+представляющими степень влияния государства на личные и экономические свободы
+(<a href="https://ru.wikipedia.org/wiki/Этатизм" target="_blank">этатизм</a>).
 Соответственно, в разные координатные четверти, в один из четырёх квадрантов
 попадают либертарианцы и авторитаристы, либералы и консерваторы.</p>
 
