--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 description: "УРИЭЛЬ: Взгляд на мир сквозь призму иудаизма"
 keywords: judaism, light
+image: /logo.jpg
 copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
 layout: default
 styles:
