--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -10361,6 +10361,10 @@ Identifying Humor, Satire, and Parody in Rabbinic Literature”)</em></p>
 Айзик <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">отец дяди Шуры</span></span></template> — фотограф,<br />
 Абрам и Макс — врачи.</p>
 
+<template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
+<p><img src="../../../files/book/linkov_brothers.jpg" alt="Linkov brothers" class="center" /></p>
+</div></div></template>
+
 <p>Сын Айзика был архитектором, лауреатом
 <a href="https://ru.wikipedia.org/wiki/Лауреаты_Государственной_премии_СССР_в_области_литературы,_искусства_и_архитектуры#1980" target="_blank">Государственной премии</a>
 в области архитектуры.  А его дочь — педагог по фортепиано, обучавшая
