Add files/book/anna_pavlova.jpg, files/book/orot.jpg

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -3960,6 +3960,7 @@ to add marginalia supplementary to the main theme.</p>
 еврейской истории, религии и традициям.  До сих пор помню эти книги, в том числе:
 Герман Вук «Это Б‑г мой», Хаим Донин «Быть евреем», книги о еврейских праздниках,
 истории и географии Израиля, и другие книги серии «Орот».
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open"><img src="../../../files/book/orot.jpg" alt="Orot" class="center" /></span></span></template>
 Каждый праздник к дедушке приходили еврейские друзья, и я вместе с ними ел
 традиционные еврейские блюда — фаршированную рыбу <em>гефилте фиш</em>, и т.д.</p>
 
@@ -4193,7 +4194,9 @@ to add marginalia supplementary to the main theme.</p>
 я не мог поверить, что мечты сбываются, что я хожу по тем же комнатам,
 где жила Анна Павлова, с балкона смотрю на её любимый пруд, в котором плавали
 лебеди.  И именно в то время, когда я там был, у пруда установили новую
-скульптуру, посвященную балерине, где она изображена в танце с крыльями.</p>
+скульптуру, посвященную балерине, где она изображена в танце с крыльями:</p>
+
+<p><img src="../../../files/book/anna_pavlova.jpg" alt="Anna Pavlova" class="center" /></p>
 </div></div></template>
 
 <!-- Подробнее о фильме я написал в review этого фильма на
