Update comments in the book and add photos

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -2800,7 +2800,7 @@ to add marginalia supplementary to the main theme.</p>
 и от этого сильно нервничал.  Но сдерживался и не вымещал
 на мне — только очень редко не выдерживал.
 Всё-таки один из таких случаев я должен рассказать,
-потому что окончилось очень смешно.  Один раз он сказал
+потому что закончилось очень смешно.  Один раз он сказал
 мне запереть входную дверь на цепочку на ночь.
 А я ужинал и думал сделать это после ужина.
 И вот он пришёл проверить, видит, что ещё
@@ -3983,7 +3983,7 @@ to add marginalia supplementary to the main theme.</p>
 Невозможно было строить жизнь с неопределённой самоидентификацией.
 Я не понимал, за что ортодоксы меня отвергают, в чём моя вина,
 если я чувствовал себя евреем, а они дали мне понять, что я — изгой.
-Вскоре после этого умер дедушка, <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">1914-03-23 – 1995-08-24 ז״ל</span></span></template>
+Вскоре после этого умер дедушка, <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">10/(23).03.1914 – 24.08.1995 ז״ל</span></span></template>
 и я потерял последнюю нить, связывающую меня с еврейством, поэтому
 стал жить полностью уединённо, и несколько лет провёл в одиночестве.</p>
 
@@ -9582,7 +9582,8 @@ Identifying Humor, Satire, and Parody in Rabbinic Literature”)</em></p>
 дедушка героически сражался на фронте против немецко-фашистских захватчиков:
 командовал военно-транспортными подразделениями (т.к. перед войной
 окончил Харьковский автомобильно-дорожный институт),
-<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">дипломной работой было проектирование многоэтажных подземных гаражей в Харькове</span></span></template>
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">дипломный проект был на тему: «Подземная механизированная
+станция обслуживания на 350 таксомоторов в Киеве» с оценкой ‘Отлично’</span></span></template>
 руководил строительством переправ, под огнём противника форсировал водные преграды,
 обеспечивал снабжение жителей блокадного Ленинграда по льду озера
 на «Дороге жизни», дослужился до звания инженер-полковник,
@@ -10419,8 +10420,8 @@ Identifying Humor, Satire, and Parody in Rabbinic Literature”)</em></p>
 в области архитектуры.  А его дочь — педагог по фортепиано, обучавшая
 <a href="https://gordonua.com/publications/kompozitor-dmitriy-gordon-mladshiy-v-14-let-ya-napisal-svoyu-pervuyu-muzyku-togda-ya-pochuvstvoval-svobodu-1562192.html" target="_blank">известного композитора</a>.</p>
 
-<p class="page-break">Мой прадед Линков Юдко Самсонович (1877 – 15.03.1941 ז״ל)
-и Эстер-Малка Пейсаховна поженились в 1909 году.</p>
+<p class="page-break">Мой прадед Линков Юдко Самсонович (1875 – 15.03.1941 ז״ל)
+и Эстер-Малка Пейсаховна (17.09.1881 – 04.1959 ז״ל) поженились в 1909 году.</p>
 
 <figure>
   <img src="../../../files/book/linkov_judka_malka.jpg" alt="[Linkov Judka &amp; Malka]" />
@@ -10433,7 +10434,8 @@ Identifying Humor, Satire, and Parody in Rabbinic Literature”)</em></p>
 
 <figure>
   <img src="../../../files/book/linkov_family.jpg" alt="[Linkov family]" />
-  <figcaption>Прадедушка Юдко, прабабушка Эстер-Малка, дедушка Давид и его сестра Тафилия</figcaption>
+  <figcaption>Прадедушка Юдко, прабабушка Эстер-Малка, дедушка Давид
+  и его сестра Тафилия (в замужестве Штейнберг, 05.12.1910 – 02.1989 ז״ל)</figcaption>
 </figure>
 
 <p class="page-break">Я тоже хотел приносить пользу людям, но как ультраортодоксы отвращают
@@ -20947,8 +20949,12 @@ provides common API for banks.</span></span></template></p>
 требует исправления и возвращения к еврейству.</p>
 
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
-<p>Юдко Самсонович (Йеһуда бен Шимшон) ז״ל умер весной 1941 года, т.е.
-до начала войны и до Холокоста, как Метушелах умер за неделю до Потопа.</p>
+<p>Юдко Самсонович (по метрике Егуда бен Шимшон) ז״ל умер весной 1941 года,
+т.е. до начала войны и до Холокоста, как Метушелах умер за неделю до Потопа.
+Вот некролог в местной газете:</p>
+
+<p><img src="../../../files/book/obituary_0.jpg" alt="Obituary paper title" class="center" />
+<img src="../../../files/book/obituary_1.jpg" alt="Obituary" class="center" /></p>
 </div></div></template>
 
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
@@ -21177,10 +21183,7 @@ provides common API for banks.</span></span></template></p>
 
 <p>Вообще всё зло в мире происходит из-за отчаяния морально слабых людей
 по поводу ограниченности человеческого тела по временно́й оси.
-<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Например, человек мечтает об освоении космоса и заселении Марса,
-а потом понимает, что в течение его жизни эта мечта не осуществится,
-и от отчаяния слетает с катушек и удаляется от моральных норм.
-И многие другие так же в старости портят себе некролог,
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Например, многие популярные люди в старости портят себе некролог,
 когда приходят к принципу «После нас хоть Потоп».</span></span></template>
 Но нет смысла страдать от ограниченного времени жизни тела,
 когда никто не страдает от ограничения тела в пространстве.
