Update comments in the book

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -2816,7 +2816,7 @@ to add marginalia supplementary to the main theme.</p>
 А может быть, ещё раньше.  Когда мне было 4 года,
 и я ещё не умел читать, то в советской газете увидел
 карикатуру, где был изображён страшный злой дядька
-в военной форме и каске, на которой было написано «ЮАР».
+в военной форме и каске с надписью «ЮАР».
 Я спросил отца, что там написано.  А он ответил, что «ЮРА».
 И тогда я сильно разрыдался.  До сих пор помню, как обидно
 мне было.  Но я не осуждаю отца — впоследствии я и сам
@@ -4562,8 +4562,9 @@ to add marginalia supplementary to the main theme.</p>
 
 <p>Первую треть жизни я жил как сирота — до 17 лет.  В 17 лет я полюбил девушку,
 и после этого вторую треть жизни к тому же жил как вдова. <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Поэтому видно, что
-настоящая любовь живёт как минимум 33 года.</span></span></template>  А всю третью треть жизни я к тому
-же ещё как пришелец безуспешно пытался добиться благосклонности от ортодоксов.
+настоящая любовь живёт как минимум 33 года, но не умирает никогда.</span></span></template>
+А всю третью треть жизни я к тому же ещё как пришелец безуспешно
+пытался добиться благосклонности от ортодоксов.
 И вот в таком состоянии как сирота, вдова, пришелец пришёл к ортодоксам, а они
 очень сильно обидели.  Никто никогда не обижал, только ортодоксы обидели.
 <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Несмотря на то, что Рамбам учил в Һильхот деот
@@ -6900,7 +6901,11 @@ XX <a href="https://www.sefaria.org/The_Antiquities_of_the_Jews.20.7" target="_b
 еврейская душа.  Точно так же как когда человек ощущает у себя любую душу,
 это подтверждает существование души.  Тот, кто отрицает у человека
 существование еврейской души, также отрицает существование души вообще,
-и этим приравнивается к атеистам и материалистам.</p>
+и этим приравнивается к атеистам и материалистам.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Ортодоксы не помогают другим людям, потому что считают,
+что у других людей нет души, как у
+<em><a href="https://ru.wikipedia.org/wiki/Неигровой_персонаж" target="_blank">non-player character</a></em>,
+которые играют вспомогательные роли и неспособны страдать.</span></span></template></p>
 
 <p>Например, мой мозг полностью сформировался только из еврейских генов, поэтому
 у меня мозг на 100% еврейский.  А еврейский мозг автоматически получает еврейскую душу.
@@ -18028,7 +18033,7 @@ derived from <em>Babel fish</em></span></span></template></p>
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
 <p>Например, введение такого абсурднейшего требования как
 <a href="https://en.wikipedia.org/wiki/HTTP_cookie#EU_cookie_directive" target="_blank">EU cookie directive</a>,
-которое вместо того, чтобы помогать пользователям, приносит людям огромные проблемы.</p>
+которое вместо того, чтобы помогать пользователям, приносит людям страдания.</p>
 </div></div></template>
 
 <p>Мне посчастливилось жить в стране, в которой приняты самые разумные
@@ -18052,7 +18057,9 @@ derived from <em>Babel fish</em></span></span></template></p>
 всё равно изредка встречается, <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">особенно в последнее время, что может быть
 связано со сменой поколений, когда молодёжь приходит на всё готовенькое</span></span></template>
 откровенно говоря, такой идиотизм, который приносит людям лишние проблемы,
-особенно когда следуют моде на ультралевые настроения.</p>
+особенно когда следуют моде на ультралевые настроения.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Например, некоторые начинают поддерживать палестинских арабов и
+даже отождествлять себя с ними — несмотря на то, что они террористы.</span></span></template></p>
 
 <p>Поэтому следует такой неутешительный вывод, что даже если стараться всё делать
 максимально разумно, принять максимально разумные законы, и даже если люди будут
@@ -20125,11 +20132,17 @@ our Community Standards.  For this reason we didn’t take the comment down.”<
 <p>Несмотря на прослеживающуюся связь с христианством, большинство левых
 радикалов атеисты, и это неудивительно.  Например, атеистический
 <a href="https://ru.wikipedia.org/wiki/Моральный_кодекс_строителя_коммунизма" target="_blank">Моральный кодекс строителя коммунизма</a>
-был списан с христианской Библии.  Логика левых атеистов такова:
-раньше религия была нужна для воспитания у людей моральных качеств, а сейчас же
-общество в развитых демократических западных странах достигло высокого уровня
-морали, поэтому продолжая эту линию развития морали в будущее, можно интуитивно
-представить дальнейшее развитие морали.</p>
+был списан с христианской Библии.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Вообще Советский Союз был не светским и не атеистическим,
+а вполне религиозной теократией с коммунистической религией,
+с верой в коммунистический рай и прочими атрибутами:
+свои пророки — Маркс, Энгельс, Мессия — Ленин, Библия — полное
+собрание сочинений Ленина, церковь — Коммунистическая партия,
+апостолы — члены Политбюро с портретами на иконостасе, и т.д.</span></span></template>
+Логика левых атеистов такова: раньше религия была нужна для воспитания у людей
+моральных качеств, а сейчас же общество в развитых демократических западных
+странах достигло высокого уровня морали, поэтому продолжая эту линию развития
+морали в будущее, можно интуитивно представить дальнейшее развитие морали.</p>
 
 <p>Отчасти это верно — в западных демократических странах мораль уже и так на
 высоте: больше нет дискриминации женщин и меньшинств, справедливые суды надёжно
@@ -22124,9 +22137,24 @@ provides common API for banks.</span></span></template></p>
 <p>Честно говоря, я не планировал писать про русских всё вышеизложенное.
 И если бы не начали войну, ничего этого написано не было бы.
 Даже наоборот, когда у меня возникали проблемы и мне нужна была помощь,
-то русские проявляли доброту и часто бескорыстно помогали мне.  Поэтому
-если б не было войны, то я мог бы сказать про русских только хорошее.
+то многие русские проявляли доброту и часто бескорыстно помогали мне.
+Поэтому если б не было войны, то я мог бы сказать про русских много хорошего.
 Но раз начали войну, то сами виноваты.</p>
+</div></div></template>
+
+<template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
+<p>Одно только разминирование растянется на несколько поколений.
+Например, в нашей маленькой стране постоянно публикуются в новостях
+сообщения, что сапёры разминировали очередную партию
+найденных боеприпасов времён Второй Мировой войны.
+Спустя 80 лет в одном только столичном регионе за год
+обезвреживают по полторы тысячи единиц взрывоопасных предметов,
+т.е. по 5 в день, а по всей стране за год около 5000
+или в среднем в день по 10 взрывных устройств:
+патроны, миномётные мины, ручные гранаты, снаряды, авиабомбы.
+Несмотря на то, что за последние 20 лет сапёры обезвредили сто тысяч
+взрывных устройств, по оценкам со времён войны до сих пор в земле
+всё ещё остаётся около полумиллиона не взорвавшихся боеприпасов.</p>
 </div></div></template>
 
 <p>Тем не менее даже не это главная угроза миру.  Это только первая
@@ -22556,8 +22584,8 @@ Doctor: Why do you say you have no problems?</p>
 
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
 <p>Ещё одна интересная аналогия с Бина/Хохма — это алгоритм
-<a href="https://ru.wikipedia.org/wiki/MapReduce" target="_blank">Map/Reduce</a>, где
-стадия Map соответствует анализу, а Reduce — синтезу результата.</p>
+<em><a href="https://ru.wikipedia.org/wiki/MapReduce" target="_blank">Map/Reduce</a></em>, где
+стадия <em>Map</em> соответствует анализу, а <em>Reduce</em> — синтезу результатов.</p>
 </div></div></template>
 
 <p>Этот процесс, соответствующий сфире Хохма, должен осуществляться
